# rust-creator

./: .gitignore  CMakeLists.txt  Nim.json.in  Rust.json.in  nim.pro  nim.qrc  nim_dependencies.pri  nimconstants.h  nimplugin.cpp  nimplugin.h  rust.pro
editor/: nimeditorfactory.cpp
project/: nimblebuildconfiguration.cpp  nimblebuildstep.cpp  nimblebuildstep.h  nimblebuildsystem.cpp  nimblebuildsystem.h  nimbleproject.cpp  nimbleproject.h  nimblerunconfiguration.cpp  nimbletaskstepwidget.h  nimbuildconfiguration.cpp  nimbuildconfiguration.h  nimbuildconfigurationwidget.cpp  nimbuildconfigurationwidget.h  nimbuildconfigurationwidget.ui  nimbuildsystem.cpp  nimbuildsystem.h  nimcompilerbuildstep.cpp  nimcompilerbuildstep.h  nimcompilerbuildstepconfigwidget.cpp  nimcompilerbuildstepconfigwidget.h  nimcompilerbuildstepconfigwidget.ui  nimcompilercleanstep.cpp  nimcompilercleanstep.h  nimoutputtaskparser.cpp  nimoutputtaskparser.h  nimproject.cpp  nimproject.h  nimprojectnode.cpp  nimprojectnode.h  nimrunconfiguration.cpp  nimrunconfiguration.h  nimtoolchain.cpp  nimtoolchainfactory.cpp
settings/: nimcodestylepreferenceswidget.cpp  nimsettings.cpp  nimsettings.h
